Font size and color contrast fixed

--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ a:hover, a.active {
     }
 
     nav ul li a {
-        font-size:1.3rem;
+        font-size:1.2rem;
         color: #E7EBCA;
     }
 
